# PIA-road-manager

./: .gitignore  README.md  simplified_roads.txt  test.model
data/: Training-4-full.model  dataset-384.pt  dataset-400.pt  dataset-96-1.pt  dataset-96-2.pt
docs/plots/: easy_plot.py  plot_bench_data.py  plot_scores_per_strategy.py  plot_scores_vs_goal.py  plot_scores_vs_goal_old_strat.py  plot_training_loss.py
docs/rapport2/: rapport2.css  rapport2.html
examples/pygame/: main.py
react_app/: package.json  tsconfig.json  webpack.config.js
react_app/src/: App.tsx  index.html  navigation.ts  theme.ts
scripts/: profile.sh
src/: bench_ai.py  benchmark.py  benchmark_profile.py  gen_dataset.py  gen_parallel_dataset.py  main.py  merge_datasets.py  old_main.py  read_dataset.py  strategy.py  test.txt  test_bst.py  test_roads.py  train_ai.py
src/ai/: dataset.py  model.py  model_constants.py  training.py
src/benchmark/: benchmark_1.py
src/cpp/: CMakeLists.txt  compile_cpp.sh  module.cpp  movable.cpp  movable.h  node.cpp  node.h  point.cpp  point.h  pytest.py  road.cpp  road.h
src/engine/: car.py  constants.py  node.py  road.py  road_data_fetcher.py  simulation.py  tree.py  utils.py
src/graphics/: assets.py  constants.py  display.py  draw.py  init_pygame.py  utils.py
src/maps/: create_map.py  create_map_API.py  create_map_GUI.py  dijkstra  dijkstra.cpp  gen_map.py  maps.py  maps_functions.py  (+2 more)
training/: auto_gen_folder.sh  check_cores.sh  check_current_progress.sh  check_load.sh  enable_ssh.sh  gen_datasets.sh  hosts_list.sh  lock_ssh.sh  wake_ensipcs.sh
(+104 files in other folders)
